<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".pomodoroactivities.PomodoroSettingsActivity">

        <TextView
            android:layout_width="374dp"
            android:layout_height="58dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/baloo_paaji"
            android:padding="5dp"
            android:text="Menu"
            android:textAlignment="center"
            android:textColor="#0B0B0B"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/work_duration_text_label"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="66dp"
            android:fontFamily="@font/lexend_deca"
            android:text="@string/work_duration"
            android:textColor="#0B0B0B"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/work_duration_spinner"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/layout_bg"
            android:popupBackground="@drawable/layout_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/work_duration_text_label" />

        <TextView
            android:id="@+id/short_break_duration_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lexend_deca"
            android:text="@string/short_break_duration"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/work_duration_spinner" />

        <Spinner
            android:id="@+id/short_break_duration_spinner"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/layout_bg"
            android:popupBackground="@drawable/layout_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/short_break_duration_text_label" />

        <TextView
            android:id="@+id/long_break_duration_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lexend_deca"
            android:text="@string/long_break_duration"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/short_break_duration_spinner" />

        <Spinner
            android:id="@+id/long_break_duration_spinner"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/layout_bg"
            android:popupBackground="@drawable/layout_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/long_break_duration_text_label" />

        <TextView
            android:id="@+id/start_long_break_after_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lexend_deca"
            android:text="@string/lba"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/long_break_duration_spinner" />

        <Spinner
            android:id="@+id/start_long_break_after_spinner"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/layout_bg"
            android:popupBackground="@drawable/layout_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_long_break_after_text_label" />

        <TextView
            android:id="@+id/ticking_seek_bar_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lexend_deca"
            android:text="@string/set_ticking_volume"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_long_break_after_spinner" />

        <SeekBar
            android:id="@+id/ticking_seek_bar"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:progressTint="#FC766A"
            android:thumbTint="#FC766A"
            app:layout_constraintEnd_toEndOf="@+id/start_long_break_after_spinner"
            app:layout_constraintStart_toStartOf="@+id/start_long_break_after_spinner"
            app:layout_constraintTop_toBottomOf="@+id/ticking_seek_bar_text_label" />

        <TextView
            android:id="@+id/ringing_seek_bar_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lexend_deca"
            android:text="@string/set_ringing_volume"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ticking_seek_bar" />

        <SeekBar
            android:id="@+id/ringing_seek_bar"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:progressTint="#FC766A"
            android:thumbTint="#FC766A"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@+id/start_long_break_after_spinner"
            app:layout_constraintStart_toStartOf="@+id/start_long_break_after_spinner"
            app:layout_constraintTop_toBottomOf="@+id/ringing_seek_bar_text_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>